# gameboy_emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  todo.md
include/: address.h  bitwise.h  boot.h  definitions.h  log.h  register.h  string.h
include/cart/: cartridge.h  cartridge_info.h
include/cpu/: cpu.h
include/memory/: memory.h
include/util/: definitions.h  files.h
include/video/: video.h
src/: main.cpp
src/cart/: cartridge.cpp  cartridge_info.cpp
src/common/: address.cpp  boot.h  register.cpp
src/memory/: memory.cpp
src/util/: files.cpp  log.cpp  string.cpp
